[tool.poetry]
name = "obsidian-helper"
version = "0.1.0"
description = ""
authors = ["Tim Koval <timkoval00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
